--- a/404.md
+++ b/404.md
@@ -5,6 +5,8 @@ permalink: 404.html
 layout: error
 ---
 
+# Looks like that page doesn't exist
+
 Sorry, but the page you are looking for doesn't exist. Try returning to [the homepage][1] and searching again, or you can [report the missing page on GitHub][2].
 
 [1]: / "front page"
